<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightGreen"
    tools:context=".controller.CreateAccountActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/createActFirstName"
                android:hint="@string/first_name"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/createActLastName"
                android:layout_margin="10dp"
                android:layout_below="@+id/createActFirstName"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/createActUsername"
                android:layout_margin="10dp"
                android:layout_below="@+id/createActLastName"
                android:hint="@string/login_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/createActPassword"
                android:layout_margin="10dp"
                android:hint="@string/password_hint"
                android:layout_below="@+id/createActUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_margin="10dp"
                android:id="@+id/createActButton"
                android:text="@string/create_act_text"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:layout_below="@+id/createActPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>